# PyPort

./: .gitignore  README.md  requirements.txt
src/: README.md  pyproject.toml  requirements.txt
src/pyport/: __init__.py  api_client.py
src/pyport/actions/: actions_api_svc.py
src/pyport/blueprints/: blueprint_api_svc.py
src/pyport/entities/: entities_api_svc.py
src/pyport/pages/: pages_api_svc.py
tests/: test_api_client.py  test_pages_api_svc.py
utilz/: cicd.ps1  cicd.py  cicd.sh  main.py  requirements.txt
