[project]
name = "PyPort"
version = "0.1.2"  # Replace with the actual version from version.txt
description = "Port REST API Wrapper"
authors = [
  { name = "Dan Amzulescu", email = "dan.a@getport.io" }
]
license = { file = "LICENSE" }  # Assuming you have a LICENSE file
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Customer Service",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
  "python-dotenv~=1.0.1",
  "requests~=2.32.3",
  "logging~=0.4.9.6",
  "setuptools~=75.8.0"
]

[project.optional-dependencies]
dev = [
  "flake8~=4.0.1",
  "build~=0.7.0",
  "setuptools~=75.8.0",
  "twine~=3.8.0"
]